--- a/dallinger/frontend/templates/dashboard_develop.html
+++ b/dallinger/frontend/templates/dashboard_develop.html
@@ -51,7 +51,7 @@
         }
 
         function handleNewParticipant() {
-            let url = "/ad?generate_tokens=true&recruiter=hotair&source=dashboard";
+            let url = "/ad?generate_tokens=true&recruiter={{ recruiter }}&source=dashboard";
             log("Recruiting new participant...");
             window.open(url, "_blank").focus();
         }
