Updated extensions for datatables to their latest versions for datatables < 2.0
Fixed bug with missing filters' headers
Allow filtering by boolean properties

--- a/dallinger/frontend/templates/dashboard_database.html
+++ b/dallinger/frontend/templates/dashboard_database.html
@@ -1,6 +1,6 @@
 {% extends "base/dashboard.html" %}
 {% block stylesheets %}
-<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/dt-1.10.21/b-1.6.3/b-html5-1.6.3/b-print-1.6.3/fh-3.1.7/r-2.2.5/sp-1.1.1/sl-1.3.1/datatables.min.css"/>
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/dt-1.13.11/b-2.4.2/b-html5-2.4.2/b-print-2.4.2/fh-3.4.0/r-2.5.0/sp-2.3.1/sl-1.7.0/datatables.min.css"/>
 <style type="text/css">
   #copy-result { margin-top: 2em; }
   #copy-command { font-family: monospace; }
@@ -23,11 +23,11 @@
 {% endblock %}
 {% block libs %}
   {{ super() }}
-  <script type="text/javascript" src="https://cdn.datatables.net/v/bs4/dt-1.10.21/b-1.6.3/b-html5-1.6.3/b-print-1.6.3/fh-3.1.7/r-2.2.5/sp-1.1.1/sl-1.3.1/datatables.min.js"></script>
+  <script type="text/javascript" src="https://cdn.datatables.net/v/bs4/dt-1.13.11/b-2.4.2/b-html5-2.4.2/b-print-2.4.2/fh-3.4.0/r-2.5.0/sp-2.3.1/sl-1.7.0/datatables.min.js"></script>
   <script>
     function templateGlobals() {
       // Values inscribed by Jinja2 when this template is rendered.
-      const datatablesOptions = {{ datatables_options | safe }};
+      var datatablesOptions = {{ datatables_options | safe }};
       const isSandbox = {{ is_sandbox | tojson  }};
       return {
         datatablesOptions: datatablesOptions,
@@ -192,6 +192,19 @@
           copyBox(commands.join('; '));
         }
       };
+
+      function updateBooleanProperties(data) {
+        data.forEach(function(item) {
+          for (let property in item) {
+            if (typeof item[property] === 'boolean') {
+              item[property] = String(item[property]);
+            }
+          }
+        });
+      }
+      // Filtering on boolean fields using the search panes requires
+      // their values to be converted to strings
+      updateBooleanProperties(globals.datatablesOptions.data);
       $('#database-table').DataTable(globals.datatablesOptions);
     });
   </script>
