Rename configuration variable from 'worker_cpu_shares' to 'docker_worker_cpu_shares' and add some documentation about it

--- a/dallinger/docker/docker-compose.yml.j2
+++ b/dallinger/docker/docker-compose.yml.j2
@@ -29,7 +29,7 @@ services:
   worker:
     image: {{ experiment_image }}
     command: dallinger_heroku_worker
-    cpu_shares: {{ config["worker_cpu_shares"] }}
+    cpu_shares: {{ config["docker_worker_cpu_shares"] }}
     depends_on:
       postgresql:
         condition: service_healthy
