Limit worker CPU usage (#6754)
* Add 'worker_cpu_shares' config variable

* Add a default value for 'worker_cpu_shares' config option and use it also for local deployments

* Rename configuration variable from 'worker_cpu_shares' to 'docker_worker_cpu_shares' and add some documentation about it

--- a/dallinger/docker/ssh_templates/docker-compose-experiment.yml.j2
+++ b/dallinger/docker/ssh_templates/docker-compose-experiment.yml.j2
@@ -46,6 +46,7 @@ services:
   worker_{{ number + 1 }}:
     image: {{ experiment_image }}
     command: dallinger_heroku_worker
+    cpu_shares: {{ config["docker_worker_cpu_shares"] }}
     depends_on:
       <<: *commondepends
     user: "${UID}:${GID}"
