--- a/dallinger/frontend/static/css/dashboard.css
+++ b/dallinger/frontend/static/css/dashboard.css
@@ -112,3 +112,27 @@ button#refresh:after {
     top: 1px;
     right: 10px;
 }
+
+.nowrap {
+    white-space: nowrap;
+}
+
+.all-failures {
+    color: red;
+}
+
+.some-failures {
+    color: orange;
+}
+
+.no-failures {
+    color: green;
+}
+
+.statistics-key {
+    font-family: monospace;
+}
+
+.statistics-value {
+    font-weight: bold;
+}
