--- a/dallinger/frontend/templates/base/layout.html
+++ b/dallinger/frontend/templates/base/layout.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html translate="no">
     <head>
         <title>{% block title %}Experiment{% endblock %}</title>
         {% block head %}
