--- a/dallinger/frontend/templates/base/layout.html
+++ b/dallinger/frontend/templates/base/layout.html
@@ -1,5 +1,9 @@
 <!doctype html>
-<html translate="no">
+{% if disable_browser_autotranslate() %}
+    <html translate="no">
+{% else %}
+    <html>
+{% endif %}
     <head>
         <title>{% block title %}Experiment{% endblock %}</title>
         {% block head %}
