--- a/dallinger/docker/ssh_templates/docker-compose-experiment.yml.j2
+++ b/dallinger/docker/ssh_templates/docker-compose-experiment.yml.j2
@@ -84,6 +84,7 @@ services:
       - PGBOUNCER_POOL_MODE=transaction
       # Connections to postgres will be closed after 60 seconds of inactivity
       - PGBOUNCER_SERVER_IDLE_TIMEOUT=60
+      - SKIP_CHECK_DALLINGER_VERSION=true
 
 {%- if config["clock_on"] %}
   clock:
