Generalize disable_browser_autotranslate to get_from_config

--- a/dallinger/frontend/templates/base/layout.html
+++ b/dallinger/frontend/templates/base/layout.html
@@ -1,5 +1,5 @@
 <!doctype html>
-{% if disable_browser_autotranslate() %}
+{% if get_from_config("disable_browser_autotranslate") %}
     <html translate="no">
 {% else %}
     <html>
