--- a/dallinger/frontend/templates/dashboard_logger.html
+++ b/dallinger/frontend/templates/dashboard_logger.html
@@ -66,129 +66,54 @@
     </style>
 
     <script>
+        const logLevels = ["DEBUG", "INFO", "SUCCESS", "WARNING", "ERROR", "CRITICAL"];
+        const colors = {
+            "DEBUG": "#4d98cc",
+            "SUCCESS": "#79b25f",
+            "WARNING": "#ddaa2d",
+            "ERROR": "#cf3f61",
+            "CRITICAL": "#cf3f61",
+            "DEFAULT": "#6c757d"
+        };
 
-        let logLevels = ["DEBUG", "INFO", "SUCCESS", "WARNING", "ERROR", "CRITICAL"];
-        let colors = {
-            "blue": "#4d98cc",
-            "green": "#79b25f",
-            "yellow": "#ddaa2d",
-            "red": "#cf3f61",
-            "gray": "#6c757d"
+        // Function to create checkboxes dynamically
+        function createCheckbox(level) {
+            const color = colors[level] || colors.DEFAULT;
+            return `<label class="level-checkbox" style="color: ${color};">
+                <input type="checkbox" value="${level}" checked> ${level}
+            </label>`;
         }
 
-        // Create filter checkboxes for each of the log levels where the color of the text is the associated color
-        logLevels.forEach(level => {
-            let color = colors.gray;
-            if (level === 'DEBUG') {
-                color = colors.blue;
-            } else if (level === 'SUCCESS') {
-                color = colors.green;
-            } else if (level === 'WARNING') {
-                color = colors.yellow;
-            } else if (['ERROR', 'CRITICAL'].includes(level)) {
-                color = colors.red;
-            }
+        // Append checkboxes to the filter div
+        document.addEventListener("DOMContentLoaded", () => {
+            const filtersDiv = document.getElementById("filters");
+            logLevels.forEach(level => {
+                filtersDiv.innerHTML += createCheckbox(level);
+            });
 
-            const checkbox = `<label class="level-checkbox" style="color: ${color};">
-                                <input  type="checkbox" value="${level}" checked> ${level}
-                              </label>`;
-            document.getElementById('filters').innerHTML += checkbox;
-        });
-
-        // Add event listener to each checkbox to toggle the visibility of the log lines
-        document.querySelectorAll('.level-checkbox input').forEach(checkbox => {
-            checkbox.addEventListener('change', function () {
-                const level = this.value;
-                const rows = document.querySelectorAll(`.status-${level.toLowerCase()}`);
-                rows.forEach(row => {
-                    row.style.display = this.checked ? 'table-row' : 'none';
+            document.querySelectorAll('.level-checkbox input').forEach(checkbox => {
+                checkbox.addEventListener('change', function () {
+                    document.querySelectorAll(`.status-${this.value.toLowerCase()}`)
+                        .forEach(row => row.style.display = this.checked ? "table-row" : "none");
                 });
             });
+
+            activateTooltips();
+            setupSearchReset();
+            fetchLogData();
         });
 
-        function escapeHTML(unsafe) {
-            return unsafe.replace(/[&<"']/g, function (m) {
-                switch (m) {
-                    case '&':
-                        return '&amp;';
-                    case '<':
-                        return '&lt;';
-                    case '"':
-                        return '&quot;';
-                    default:
-                        return '&#039;';
-                }
-            });
-        }
-
-        // store in GET => highlight=line_number
-        const highlightLine = new URLSearchParams(window.location.search).get('highlight');
-
-        function printLine(data) {
-            let out;
-            let color = 'inherit';
-
-            if (data.levelname === 'DEBUG') {
-                color = colors.blue
-            } else if (data.levelname === 'SUCCESS') {
-                color = colors.green;
-            } else if (data.levelname === 'WARNING') {
-                color = colors.yellow;
-            } else if (['ERROR', 'CRITICAL'].includes(data.levelname)) {
-                color = colors.red;
-            }
-
-            let source, message = data.message;
-            if (data.name === "werkzeug") {
-                source = "werkzeug";
-            } else {
-                let name = data.name || "";
-                source = `${data.filename}`
-                if (name) {
-                    source += `:${name}`;
-                }
-                source += `:${data.lineno}`;
-            }
-            let tooltipText = escapeHTML(`
-                <span style='font-weight: bold'>Time</span> <span class='monospace'>${data.asctime}</span><br>
-                <span style='font-weight: bold'>Source</span> <span class='monospace'>${source}</span>
-            `);
-
-            let trClass = `status-${data.levelname.toLowerCase()}`
-            if (parseInt(highlightLine) === parseInt(data.log_line_number)) {
-                trClass += ' highlight';
-            }
-            out = `<tr id="line-${data.log_line_number}" class="${trClass}">`;
-
-            let lineNumber = data.log_line_number;
-            let lineNumberHref = window.location.pathname + `?highlight=${lineNumber}&start=${lineNumber - 10}&end=${lineNumber + 10}`;
-            let lineNumberContent = `<a href="${lineNumberHref}">${lineNumber}</a>`;
-            out += `<td>${lineNumberContent}</td>`;
-            out += `<td data-bs-toggle="tooltip" data-bs-html="true"  data-bs-placement="left" title="${tooltipText}" style="color: ${color};font-weight: bold">${data.levelname}</td>`;
-
-            if (['ERROR', 'CRITICAL'].includes(data.levelname)) {
-                color = colors.red;
-                message = `<span style="background: ${colors.red}; color:white">${message}</span>`
-                if (data.exc_info) {
-                    message += `<pre>${data.exc_info}</pre>`
-                }
-
-            } else {
-                message = `<span style="color: ${color}">${message}</span>`
-            }
-            out += `<td>${message}</td>`;
-            out += `</tr>`;
-            return out;
-        }
-
+        // Function to activate Bootstrap tooltips
         function activateTooltips() {
-            const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
-            const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl, {
+            const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]');
+            [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl, {
                 boundary: 'viewport',
                 sanitize: false,
                 html: true
-            }))
+            }));
         }
+
+        const highlightLine = new URLSearchParams(window.location.search).get('highlight');
 
         function moveToHighlight() {
             if (highlightLine) {
@@ -199,58 +124,86 @@
             }
         }
 
-        if (window.location.search.includes('query')) {
-            // set the search input value to the query string
-            document.querySelector('input[name="query"]').value = new URLSearchParams(window.location.search).get('query');
-            let infoText = document.getElementById('info-text');
-            let resetButton = document.createElement('button');
-            resetButton.innerHTML = "Reset search";
-            resetButton.className = "btn btn-secondary btn-small my-3";
-            resetButton.onclick = function () {
-                window.location.href = window.location.pathname;
+        // Function to reset search query
+        function setupSearchReset() {
+            if (window.location.search.includes('query')) {
+                document.querySelector('input[name="query"]').value = new URLSearchParams(window.location.search).get('query');
+                const infoText = document.getElementById('info-text');
+                const resetButton = document.createElement('button');
+                resetButton.innerHTML = "Reset search";
+                resetButton.className = "btn btn-secondary btn-small my-3";
+                resetButton.onclick = () => window.location.href = window.location.pathname;
+                infoText.innerHTML += " The logs have been filtered by the search query.<br>";
+                infoText.appendChild(resetButton);
             }
-            infoText.innerHTML = infoText.innerHTML + " The logs have been filtered by the search query.<br>";
-            infoText.appendChild(resetButton);
         }
-        if (window.location.search.includes('start') || window.location.search.includes('end')) {
-            let badResponse = false;
-            fetch("/log" + window.location.search)
-                .then(response => {
-                    if (!response.ok) {
-                        badResponse = true;
-                    }
-                    return response.json();
-                })
-                .then(data => {
-                    if (badResponse) {
-                        throw new Error(data.msg);
-                    }
-                    data.forEach(function (line) {
-                        $("#log tbody").append(printLine(line));
-                    });
-                    activateTooltips();
-                    moveToHighlight();
-                })
-                .catch(error => {
-                    console.error('There has been a problem with your fetch operation:', error);
-                    $("#log tbody").append(`<tr><td colspan="3" style="color: ${colors.red};">Error: ${error.message}</td></tr>`);
-                });
 
-        } else {
-            var source = new EventSource("/log" + window.location.search);
-            source.onmessage = function (event) {
-                let data = JSON.parse(event.data);
-                if (data.stop) {
-                    moveToHighlight();
-                    source.close();
-                } else {
-                    $("#log tbody").prepend(printLine(data));
-                    activateTooltips()
+        // Fetch logs and append them dynamically
+        function fetchLogData() {
+            if (window.location.search.includes('start') || window.location.search.includes('end')) {
+                let badResponse = false;
+                const logContainer = document.querySelector("#log tbody");
+                fetch("/log" + window.location.search)
+                    .then(response => {
+                        if (!response.ok) {
+                            badResponse = true;
+                        }
+                        return response.json();
+                    })
+                    .then(data => {
+                        if (badResponse) {
+                            throw new Error(data.msg);
+                        }
+                        logContainer.innerHTML = "";
+                        data.forEach(line => logContainer.appendChild(printLogLine(line)));
+                        activateTooltips();
+                        moveToHighlight();
+                    })
+                    .catch(error => {
+                        console.error('There has been a problem with your fetch operation:', error);
+                        $("#log tbody").append(`<tr><td colspan="3" style="color: ${colors.red};">Error: ${error.message}</td></tr>`);
+                    });
+
+            } else {
+                var source = new EventSource("/log" + window.location.search);
+                source.onmessage = function (event) {
+                    let data = JSON.parse(event.data);
+                    if (data.stop) {
+                        moveToHighlight();
+                        source.close();
+                    } else {
+                        $("#log tbody").prepend(printLogLine(data));
+                        activateTooltips()
+                    }
                 }
             }
         }
 
+        // Function to generate log row HTML
+        function printLogLine(data) {
+            const color = colors[data.levelname] || "inherit";
+            const source = data.name === "werkzeug" ? "werkzeug" : `${data.filename}:${data.name || ""}:${data.lineno}`;
+            const tooltipText = `<span style='font-weight: bold'>Time</span> <span class='monospace'>${data.asctime}</span><br>
+                         <span style='font-weight: bold'>Source</span> <span class='monospace'>${source}</span>`;
 
+            const row = document.createElement("tr");
+            row.classList.add(`status-${data.levelname.toLowerCase()}`);
+            if (parseInt(new URLSearchParams(window.location.search).get('highlight')) === parseInt(data.log_line_number)) {
+                row.classList.add("highlight");
+            }
+
+            let lineNumber = data.log_line_number;
+            let url = `?highlight=${data.log_line_number}&start=${data.log_line_number - 10}&end=${data.log_line_number + 10}`
+            row.innerHTML = `<td><a href="${url}">${data.log_line_number}</a></td>`
+            row.innerHTML += `<td data-bs-toggle="tooltip" data-bs-html="true" data-bs-placement="left" title="${tooltipText}" style="color: ${color}; font-weight: bold">${data.levelname}</td>`
+            let message = `<span style="color: ${color}">${data.message}</span>`
+            if (data.exc_info) {
+                message += `<pre>${data.exc_info}</pre>`
+            }
+            row.innerHTML += `<td>${message}</td>`;
+
+            return row;
+        }
     </script>
 
 {% endblock %}
