Remove credentials from url to avoid `Error: Failed to execute 'fetch' on 'Window': Request cannot be constructed from a URL that includes credentials:`

--- a/dallinger/frontend/templates/dashboard_logger.html
+++ b/dallinger/frontend/templates/dashboard_logger.html
@@ -138,6 +138,18 @@
             }
         }
 
+        function removeCredsFromUrl() {
+            let url = new URL(document.URL);
+            if (url.username !== "" && url.password !== "") {
+                url = window.location.href;
+                // Forward to url
+                console.log("Redirecting to: " + url);
+                window.location.replace(url);
+            }
+        }
+
+        removeCredsFromUrl();
+
         const endpoint = "/dashboard/logs";
         // Fetch logs and append them dynamically
         function fetchLogData() {
