--- a/dallinger/frontend/templates/dashboard_logger.html
+++ b/dallinger/frontend/templates/dashboard_logger.html
@@ -210,7 +210,8 @@
             let url = `?highlight=${data.log_line_number}&start=${data.log_line_number - 10}&end=${data.log_line_number + 10}`
             row.innerHTML = `<td><a href="${url}">${data.log_line_number}</a></td>`
             row.innerHTML += `<td data-bs-toggle="tooltip" data-bs-html="true" data-bs-placement="left" title="${tooltipText}" style="color: ${color}; font-weight: bold">${data.levelname}</td>`
-            let message = `<span style="color: ${color}">${data.message}</span>`
+            let message = data.message.replace(/(https?:\/\/[^\s]+)/g, '<a href="$1" target="_blank">$1</a>');
+            message = `<span style="color: ${color}">${message}</span>`
             if (data.exc_info) {
                 message += `<pre>${data.exc_info}</pre>`
             }
